Grace/tests/gibbs/errors/t019.grace
// ERROR = P1029
catch
} case {
    e : Error -> print "OK; Caught an error."
}
